# smart_redis_storage

./: README.md  requirements.txt  setup.cfg
requirements/: requirements-dev.txt
smart_redis_storage/: __init__.py  redis_storage.py
