[metadata]
name = smart-redis-storage
version = 0.0.1
author = A.A Suvorov
author_email = smartlegiondev@gmail.com
description = Convenient work with Redis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/smart_redis_storage/
project_urls =
    Documentation = https://github.com/smartlegionlab/smart_redis_storage/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/smart_redis_storage/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    redis
    django
    smartlegionlab

[options]
package_dir =
packages = find:
python_requires = >= 3.6
include_package_data = true
zip_safe = false
install_requires =
    redis~=5.0.4